qt-prod/qt-system/grafana/test-pv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-static
  namespace: qt-system
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
          - name: disk-pvc
            mountPath: "/data"
      volumes:
        - name: disk-pvc
          persistentVolumeClaim:
            claimName: datadir-qt-grafana
