qt-prod/qt-system/grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: qt-system
  labels:
    app: grafana
spec:
  type: ClusterIP
  ports:
    - name: tcp-80
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: grafana
